Fix bug: Embedded comments disappear in iOS 12, when scrolling
In iOS 12, fixed position behaves differently than iOS 11 and all other
browsers, which results in somehow the embedded comments disappearing,
when scrolling. And reappearing if clicking any (invisible) button.
`Position: fixed` isn't needed in the iframes anyway, so remove those
styles, if in iframe.

Remove old iOS 12 comments-disappear workaround, no longer needed.

--- a/client/app-slim/page/page.styl
+++ b/client/app-slim/page/page.styl
@@ -52,7 +52,7 @@ body
 
 .dw-fixed-topbar-wrap,
 .esScrollBtns_fixedBar,
-#esPageColumn
+html:not(.s_InIframe) #esPageColumn
   top: 0;
   bottom: 0;
   position: fixed;
@@ -63,7 +63,7 @@ body
     right: $contextbarMinWidth;
   &.dw-fixed-topbar-wrap
     bottom: auto;
-html.esSidebarsOverlayPage
+html:not(.s_InIframe).esSidebarsOverlayPage
   .dw-fixed-topbar-wrap,
   .esScrollBtns_fixedBar,
   #esPageColumn
@@ -80,7 +80,7 @@ html.esSidebarsOverlayPage
   overflow-x: visible;
 
 // Enables momentum based scrolling, on iPhone, which is otherwise only enabled for <body>.
-html.ios #esPageColumn
+html.ios:not(.s_InIframe) #esPageColumn
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 
@@ -106,7 +106,7 @@ html.esSidebarsOverlayPage
     max-width: calc(100% - 25px);
 
 // Dims the page if any sidebar open, and screen small. Closes the sidebar on click.
-html.esSidebarsOverlayPage:not(.s_InIframe)
+html:not(.s_InIframe).esSidebarsOverlayPage
   &.es-pagebar-open,
   &.es-watchbar-open
     #theSidebarPageOverlay
